litellm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litellm-deployment
  labels:
    app: litellm
spec:
  selector:
    matchLabels:
      app: litellm
  template:
    metadata:
      labels:
        app: litellm
    spec:
      containers:
      - name: litellm
        image: docker.litellm.ai/berriai/litellm:main-stable # it is recommended to fix a version generally
        args:
          - "--config"
          - "/app/proxy_server_config.yaml"
        ports:
        - containerPort: 4000
        volumeMounts:
        - name: config-volume
          mountPath: /app/proxy_server_config.yaml
          subPath: config.yaml
      volumes:
        - name: config-volume
          configMap:
            name: litellm-config-file
---
apiVersion: v1
kind: Service
metadata:
  name: litellm-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: litellm          # Must perfectly match deployment's matchLabels
  ports:
    - protocol: TCP
      port: 4000          # The port exposed inside the cluster for your Ingress
      targetPort: 4000    # The containerPort specified in your deployment
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: litellm-ingress
  namespace: default
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.k8sflow.space
      secretName: ingress-tls
  rules:
    - host: api.k8sflow.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: litellm-service
                port:
                  number: 4000
